@@ -17,6 +17,8 @@ NEW FEATURES
  
  * Support for DTM sentences; datum reference.
  
+ * Support for RPM sentences; engine or shaft revolutions.
+ 
  * SentenceReader; exception listener for detecting i/o errors.
 
 CHANGES
@@ -30,7 +32,7 @@ CHANGES
  * RMCParser, VTGParser; if optional FAA mode was omitted, sentence field count
    is now adjusted before setting the mode.
    
- * SentenceValidator; sentences including the terminator <cr><lf> did not pass
+ * SentenceValidator; sentences including line terminator <cr><lf> did not pass
    validation. Fixed by adding optional newline in sentence format regexp.
 
 KNOWN ISSUES
